--- a/guides/source/guides.css
+++ b/guides/source/guides.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #f5f9fa;
+}
+
 ol, li {
     margin: 0;
     padding: 0;
@@ -17,6 +21,14 @@ ol, li {
 
 .column-catalog > details {
     margin: 6px 12px;
+    transition: color 1s, transform 1s;
+}
+
+.column-catalog > details[open] {
+    box-shadow: 3px 3px 4px black;
+    color: green;
+    transform: rotate(-2deg);
+    transition: color 1s, transform 1s;
 }
 
 details > ol {
@@ -26,4 +38,9 @@ details > ol {
 ol > li {
     list-style-type: none;
     padding: 8px 0px;
+}
+
+ol > li:hover {
+    outline: 1px dashed blue;
+    box-shadow: 3px 3px 4px black;
 }
