--- a/guides/source/common.css
+++ b/guides/source/common.css
@@ -2,6 +2,16 @@ code {
 	background-color: rgb(220, 220, 220, 0.5);
 }
 
+.div_card {
+	border-radius: 10px;
+	background-color: white;
+	padding: 20px;
+	margin-top: 20px;
+	box-shadow: 4px 4px 12px 1px rgba(0,0,0,0.2);
+	line-height: 1.5;
+}
+
+
 section.sec hr:first-child {
 	border: 2px solid #987cb9;
 }
