--- a/guides/css/css_selector.css
+++ b/guides/css/css_selector.css
@@ -18,7 +18,7 @@
     width: 1em;
     height: calc(50% + 20px);
     border-left: 2px dashed red;
-    border-bottom: 2px dashed red;
+    border-bottom: 2px solid red;
 }
 
 .line_div:after {
@@ -47,7 +47,7 @@
 }
 
 .typeDetails > summary { 
-    transition: color 1s; color: black; 
+    transition: color 1s; 
     border-radius: 10px;
     background-color: gray;
     color: white;
@@ -63,9 +63,16 @@
 
 .attr_div {
     border: 2px solid black;
-    flex: 1 350px;
-    padding: 5px;
+    flex: 1 30%;
     margin: 5px;
+    padding: 5px;
+}
+
+.selec {
+    width: 180px; 
+    padding: 5px;
+    border-radius: 5px; 
+    margin: 5px 0;
 }
 
 .p_code {
@@ -74,28 +81,23 @@
      display: inline-block;
 }
 
-[data-test] {
-    border-color: black;
+#d1, .c1, div[name="n1"] {
+    width: 100px; height: 100px; border: 2px dashed blue; margin: 5px;
 }
 
-[data-test="hello"] {
-    border-color: red;
+.c2 div {
+    border: 1px solid blue; margin: 10px;padding: 5px;
 }
 
-[data-test~="world"] {
-    border-color: blue;
+.c5>div {
+   border: 1px solid blue; margin: 10px; padding: 5px;
 }
 
-[data-test^='your'] {
-    border-color: yellow;
+.c3+div {
+    background: red;
 }
 
-[data-test$='da'] {
-    border-color: orange;
+.c4~div {
+    background: red;
+    background-clip: content-box;
 }
-
-[data-test*='is'] {
-    border-color: purple;
-}
-
-
