--- a/guides/css/styling_boxes.css
+++ b/guides/css/styling_boxes.css
@@ -51,7 +51,7 @@ select {
 }
 
 .outline {
-    width: 400px;
+    width: 100%;
     height: 200px;
     border: 10px solid black;
     border-radius: 50px;
@@ -61,12 +61,3 @@ select {
     box-sizing: border-box;;
 }
 
-.test {
-    width: 200px;
-    height: 100px;
-    border: 1px solid red;
-}
-
-.test:focus {
-    background: black;
-}
