--- a/guides/css/styling_boxes.css
+++ b/guides/css/styling_boxes.css
@@ -61,3 +61,10 @@ select {
     box-sizing: border-box;;
 }
 
+.filterBox {
+    margin-bottom: 20px;
+    border: 10px dashed red;
+    height: 100px; 
+    position: relative;
+    box-shadow: 5px 5px 5px black;
+}
