--- a/guides/css/css_layout.css
+++ b/guides/css/css_layout.css
@@ -1,10 +1,10 @@
-* {
-    box-sizing: border-box;
+:root{
 }
 
+
 .flex_container {
-    width: 630px;
-    height: 630px;
+    width: 330px;
+    height: 330px;
     display: flex;
     border: 1px dashed gray;
 }
@@ -44,4 +44,19 @@
 
 .align_container button:first-child {
     align-self: flex-start;
+}
+
+.div_grid1 {
+    display: grid;
+    width: 600px;
+    height: 300px;
+    border: 1px dashed black;
+    grid-gap: 10px 15px;
+    grid-template-columns: repeat(3, 1fr) 30px 10%;
+    grid-template-rows: 20px auto 30%;
+}
+
+.div_grid1>div{
+    background: red;
+    border-color: 
 }
